corrected alignment of social icons

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     }
 .social-icon{
     float:right;
+    margin:0 5px 0 5px;
     height:100%;
 }
-#social-icons{
-}
+
